--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,3 @@
-packageExtensions:
-  "@chakra-ui/styled-system@*":
-    dependencies:
-      lodash.mergewith: ^4.6.2
+nodeLinker: node-modules
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-
-yarnPath: .yarn/releases/yarn-2.4.1.cjs
+yarnPath: .yarn/releases/yarn-3.0.1.cjs
