--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "export": "next export",
     "serve": "serve out",
-    "lint": "eslint --ext .js",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx",
     "release": "standard-version",
     "release:pre": "standard-version --prerelease",
     "release:minor": "standard-version --release-as minor",
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@stitches/react": "^0.2.5",
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
