--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "release:pre": "standard-version --prerelease",
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "optimize:images": "node scripts/optimize/images"
   },
   "dependencies": {
     "next": "^11.1.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "serve": "^12.0.0",
+    "sharp": "^0.29.1",
     "standard-version": "^9.3.1",
     "typescript": "^4.3.5"
   }
