--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "serve": "serve out",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint src/**/*.*",
     "release": "standard-version",
     "release:pre": "standard-version --prerelease",
     "release:minor": "standard-version --release-as minor",
@@ -22,6 +21,7 @@
   "dependencies": {
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -30,15 +30,15 @@
     "@stitches/react": "^1.2.5",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "serve": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "7.12.1",
+    "eslint-config-standard": "latest",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "5.0.0",
+    "eslint-plugin-react": "latest",
     "sharp": "^0.29.1",
     "standard-version": "^9.3.1",
     "typescript": "^4.4.4"
