--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "Seia-Soto <seia@outlook.kr>",
   "license": "MIT",
-  "packageManager": "yarn@3.0.2",
+  "packageManager": "yarn@3.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,28 +19,31 @@
     "optimize:images": "node scripts/optimize/images"
   },
   "dependencies": {
-    "next": "^11.1.2",
+    "next": "^12.0.2",
     "next-compose-plugins": "^2.2.1",
+    "next-redux-wrapper": "^7.0.5",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@stitches/react": "^1.2.5",
-    "@types/node": "^16.11.0",
-    "@types/react": "^17.0.30",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint": "7.12.1",
-    "eslint-config-standard": "latest",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.0.0",
-    "eslint-plugin-react": "latest",
-    "sharp": "^0.29.1",
-    "standard-version": "^9.3.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-react": "^7.26.1",
+    "sharp": "^0.29.2",
+    "standard-version": "^9.3.2",
     "typescript": "^4.4.4"
   }
 }
